--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <a href="#" class="about">про ютуберів</a>
              <a href="#" class="blog">унікальни ресурси</a>
              <a href="#" class="projects">донат</a>
-             <a href="#" class="contact">головна сторинка</a>
+             <a href="https://oleksandr-yuhno.github.io/new-logiga/" class="contact">головна сторинка</a>
              </nav>
         </header>
 <main>
